# triboferrin

./: CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs
